<resources>
    <string name="app_name" translatable="false">Automation</string>
    <string name="ruleActivate">Activating rule %1$s</string>
    <string name="profileActivate">Activating profile %1$s</string>
    <string name="ruleActivateToggle">Activating rule %1$s in Togglemode</string>
    <string name="addPoi">Add location</string>
    <string name="addRule">Add Rule</string>
    <string name="poiList">Location List:</string>
    <string name="ruleList">Rule List:</string>
    <string name="pleaseEnterValidName">Please enter a valid name.</string>
    <string name="pleaseSpecifiyTrigger">Please specify at least one trigger.</string>
    <string name="pleaseSpecifiyAction">Please specify at least one action.</string>
    <string name="serviceWontStart">No rules defined. Service won\'t start.</string>
    <string name="serviceStarted">Automation Service started.</string>
    <string name="version">Version %1$s.</string>
    <string name="logServiceStarting" translatable="false">Starting service.</string>
    <string name="logNotAllMeasurings" translatable="false">Don\'t have all location measurings, yet. Can\'t do comparison.</string>
    <string name="distanceBetween">Distance between GPS location and network location is %1$d meters. This +1m should be the absolute minimum radius.</string>
    <string name="comparing" translatable="false">Have both network and gps location. Comparing...</string>
    <string name="logNoSuitableProvider" translatable="false">No suitable location providers could be used.</string>
    <string name="positioningWindowNotice">If you are in a building it is strongly advised to place your device next to a window until a position has been found. Otherwise it may take a very long time if it is able to find one at all.</string>
    <string name="gettingPosition">Getting position. Please wait...</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="save">Save</string>
    <string name="entering">entering</string>
    <string name="leaving">leaving</string>
    <string name="generalSettings">General settings</string>
    <string name="startAtSystemBoot">Start at system boot</string>
    <string name="onOff">On/Off</string>
    <string name="writeLogFile">Write log file</string>
    <string name="useTextToSpeechOnNormalSummary">Use TextToSpeech on normal</string>
    <string name="useTextToSpeechOnVibrateSummary">Use TextToSpeech on vibrate</string>
    <string name="useTextToSpeechOnSilentSummary">Use TextToSpeech on silent</string>
    <string name="useTextToSpeechOnNormalTitle">TTS on normal</string>
    <string name="useTextToSpeechOnVibrateTitle">TTS on vibrate</string>
    <string name="useTextToSpeechOnSilentTitle">TTS on silent</string>
    <string name="positioningSettings">Positioning settings</string>
    <string name="listenToWifiState">Listen to wifi state changes where possible</string>
    <string name="wifiState">Wifi state</string>
    <string name="listenToAccelerometerState">Observe device movement where wifi is not available</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="accelerometerTimer">Use Accelerometer after x minutes without tower mast change</string>
    <string name="cellMastIdleTime">Cell tower idle time</string>
    <string name="accelerometerThresholdDescription">Threshold for accelerometer movements</string>
    <string name="accelerometerThreshold">Accelerometer threshold</string>
    <string name="positioningThresholds">Positioning thresholds</string>
    <string name="minimumDistanceChangeForGpsLocationUpdates">Minimum distance change for gps location updates</string>
    <string name="distanceForGpsUpdate">Distance for gps update [m]</string>
    <string name="minimumDistanceChangeForNetworkLocationUpdates">Minimum distance change for network location updates</string>
    <string name="distanceForNetworkUpdate">Distance for network update [m]</string>
    <string name="satisfactoryAccuracyNetwork">Satisfactory accuracy when getting location via cell towers in meters</string>
    <string name="networkAccuracy">Network accuracy [m]</string>
    <string name="minimumTimeForLocationUpdates">Minimum time change in milliseconds for location updates</string>
    <string name="timeForUpdate">Time for update [milliseconds]</string>
    <string name="soundSettings">Sound settings</string>
    <string name="speedMaximumTimeBetweenLocations">Maximum time between 2 locations for speed determination.</string>
    <string name="speedMaximumTime">Time in minutes</string>
    <string name="settingsCategoryNoiseLevelMeasurements">Noise level measurement</string>
    <string name="timeBetweenNoiseLevelMeasurementsSummary">Seconds between noise level measurements</string>
    <string name="timeBetweenNoiseLevelMeasurementsTitle">Seconds between noise level measurements</string>
    <string name="lengthOfNoiseLevelMeasurementsSummary">Length in seconds for each noise level measurement</string>
    <string name="lengthOfNoiseLevelMeasurementsTitle">Length of each noise level measurement</string>
    <string name="referenceValueForNoiseLevelMeasurementsSummary">Physical reference value for noise level measurement</string>
    <string name="referenceValueForNoiseLevelMeasurementsTitle">Reference for noise measurement</string>
    <string name="logLevelSummary">Log level (1=minimum, 5=maximum)</string>
    <string name="logLevelTitle">Log level</string>
    <string name="startServiceAfterAppUpdate">Start service automatically after app update if it has been running before.</string>
    <string name="startServiceAfterAppUpdateShort">Start service after update</string>
    <string name="settingsCategoryHttp">HTTP(s) Requests</string>
    <string name="httpAcceptAllCertificatesTitle">Accept all certificates</string>
    <string name="httpAcceptAllCertificatesSummary">Skip validity check of SSL certificates (recommended against activating this)</string>
    <string name="httpAttemptsSummary">Number of attempts in case HTTP requests fail for connectivity reasons</string>
    <string name="httpAttemptsTitle">Number of HTTP attempts</string>
    <string name="httpAttemptsTimeoutSummary">Timeout for HTTP requests [seconds]</string>
    <string name="httpAttemptsTimeoutTitle">Timeout [sec]</string>
    <string name="httpAttemptGapSummary">Pause before another attempt [seconds]</string>
    <string name="httpAttemptGapTitle">Pause [sec]</string>
    <string name="timeoutForGpsComparisonsTitle">GPS timeout [sec]</string>
    <string name="timeoutForGpsComparisonsSummary">Maximum time in seconds to trying getting a GPS location for comparison. If over last known location will be applied.</string>
    <string name="rememberLastActivePoiSummary">If you are at a location, restart your device or the application and leave the location the application will run rules accociated to leaving the location upon its next start.</string>
    <string name="rememberLastActivePoiTitle">Remember last active location</string>
    <string name="muteTextToSpeechDuringCallsTitle">Mute during calls</string>
    <string name="muteTextToSpeechDuringCallsSummary">Mute TextToSpeech during calls</string>
    <string name="settingsCategoryProcessMonitoring">Process monitoring</string>
    <string name="timeBetweenProcessMonitoringsTitle">Seconds between process monitorings</string>
    <string name="timeBetweenProcessMonitoringsSummary">The lower, the higher the battery usage</string>
    <string name="settings">Settings</string>
    <string name="timeFrameWhichDays">On which days?</string>
    <string name="insideOrOutsideTimeFrames">Inside or outside those timeframes?</string>
    <string name="defaultSettings">Default settings</string>
    <string name="activityDetection">Activity detection</string>
    <string name="activityDetectionFrequencyTitle">Activity detection frequency [sec]</string>
    <string name="activityDetectionFrequencySummary">Seconds between attempts to detect activity.</string>
    <string name="activityDetectionRequiredProbabilityTitle">Activity detection probability</string>
    <string name="activityDetectionRequiredProbabilitySummary">Certainty from which activities are accepted as fact.</string>
    <string name="privacyLocationingTitle">Only private locationing</string>
    <string name="privacyLocationingSummary">Avoid locationing methods that may send your location to a provider, e.g. Google. This will use GPS only and may therefore be slow or not work reliably.</string>
    <string name="showIcon">Show icon</string>
    <string name="showIconWhenServiceIsRunning">Show icon when service is running (hiding it only works below Android 7). If you\'re on a higher version, go to system settings, then Automation, then notifications and disable the \"Service notification\".</string>
    <string name="volumeTest">Volume calibration</string>
    <string name="logFileMaxSizeSummary">Maximum log file size in Megabyte. Will be rotated if bigger.</string>
    <string name="logFileMaxSizeTitle">Maximum log file size [Mb]</string>
    <string name="startScreen">Start screen</string>
    <string name="startScreenSummary">Select the screen the applications opens with at start.</string>
    <string name="executeRulesAndProfilesWithSingleClickTitle">Run rules/profiles with single click.</string>
    <string name="displayNewsOnMainScreen">Display application news on main screen</string>
    <string name="displayNewsOnMainScreenDescription">Announcements about this app only, we\'re probably talking about 1-2 per year, not more.</string>
    <string name="playSound">Play sound</string>
    <string name="alwaysPlay">always play</string>
    <string name="alwaysPlayExplanation">If this settings is active the sound will always be played. If it is deactivated it will only play if your phone is neither on mute nor vibrate. However if active it will not have an effect on the volume. So if your phone is on ring mode it will not increase the media volume for example. So if media volume is on mute you won\'t hear anything either.</string>
    <string name="selectSoundFile">Select sound file</string>
    <string name="shareConfigAndLogFilesWithDev">Attach config and log files.</string>
    <string name="importConfiguration">Import configuration</string>
    <string name="exportConfiguration">Export configuration</string>
    <string name="moreSettings">More settings</string>
    <string name="automaticUpdateCheck">Check for updates</string>
    <string name="automaticUpdateCheckSummary">Only applies to APK version.</string>
    <string name="tabsPlacement">Position of tab bar</string>
    <string name="tabsPlacementSummary">Choose where the tabs bar should be placed.</string>
    <string name="repeatEveryXseconds">Repeat every x seconds</string>
    <string name="deviceOrientationTimeAcceptIntervalTitle">Signal frequency</string>
    <string name="deviceOrientationTimeAcceptIntervalSummary">Accept new movement signals every x milliseconds</string>
    <string name="deviceOrientationSettings">Device orientation settings</string>
    <string name="actionMediaControl">Control media playback</string>
    <string name="playPause">toggle play/pause</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="previous">previous</string>
    <string name="next">next</string>
    <string name="stop">stop</string>
    <string name="actionMediaControlNotice">Keep in mind that this action may not work with ALL players out there. And even if it does, not every button may be functional.</string>
</resources>