<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_margin" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_span="2"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/actionMediaControl" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_margin"
            android:text="@string/actionMediaControlNotice" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rbMediaPlayPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playPause" />

            <RadioButton
                android:id="@+id/rbMediaPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play" />

            <RadioButton
                android:id="@+id/rbMediaPause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pause" />

            <RadioButton
                android:id="@+id/rbMediaStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop" />

            <RadioButton
                android:id="@+id/rbMediaPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/previous" />

            <RadioButton
                android:id="@+id/rbMediaNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next" />

        </RadioGroup>

        <Button
            android:id="@+id/bSaveControlMediaAction"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>

</ScrollView>